leitura do arquivo e frequencia feito

--- a/Trabalho Final/makefile
+++ b/Trabalho Final/makefile
@@ -1,5 +1,5 @@
 all:
-	gcc -o pra praMain.c pra.c pra.h Lista.h Lista.c
+	gcc -g -o pra praMain.c pra.c pra.h Lista.h Lista.c ABP.h ABP.c FilaEncadeada.c FilaEncadeada.h
 	./pra texto.txt
 
 rm:
